-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12
-
Component/s: hotspot
-
b07
-
ppc
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8214011 | 11.0.3 | Gunter Haug | P3 | Resolved | Fixed | master |
Enabling -Wreorder requires a few fixes in PPC64 platform files.
- backported by
-
JDK-8214011 [PPC64] Fix build which was broken by 8208672 (Enable -Wreorder)
-
- Resolved
-
- relates to
-
JDK-8209433 [s390] Fix build which was broken by 8208672 (Enable -Wreorder)
-
- Resolved
-