8209357: [PPC64] Fix build which was broken by 8208672 (Enable -Wreorder)

Reviewed-by: mbaesken, tschatzl